Fix the typo in the message file & remove the initialize method on library element.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1866,10 +1866,6 @@ Element.Module.titleID=Title key
 Element.Module.description=Description
 Element.Module.descriptionID=Description key
 Element.Module.comments=Comments
-Element.Module.initialize=Intialize
-Element.Module.initialize.toolTip=Called when the report starts executing.
-Element.Module.initialize.reportContext=Report context
-Element.Module.initialize.object=Object
 Element.Module.colorPalette=Color palette
 Element.Module.configVars=Config variables
 Element.Module.images=Images
@@ -1939,6 +1935,10 @@ Element.ReportDesign.slot.body=Body
 Element.ReportDesign.slot.scratchPad=Scratch Pad
 Element.ReportDesign.slot.templateParameterDefinitions=Template Parameter Definitions
 Element.ReportDesign.dataSourceBindings=Data Source bindings
+Element.ReportDesign.initialize=Intialize
+Element.ReportDesign.initialize.toolTip=Called when the report starts executing.
+Element.ReportDesign.initialize.reportContext=Report context
+Element.ReportDesign.initialize.object=Object
 
 #2. Report Element ( Prefix = Element.ReportElement )
 Element.ReportElement.displayName=Display name
@@ -1988,6 +1988,7 @@ Element.DataSet.columnHints=Column hints
 Element.DataSet.filter=Filter
 Element.DataSet.cachedMetaData=Cached metadata
 Element.DataSet.refTemplateParameter=Referred Template Parameter Definition
+Element.DataSet.cachedRowCount=Cached row count
   
 #5. JdbcSelectDataSet  ( prefix  Element.JdbcSelectDataSet )
 Element.JdbcSelectDataSet.statement=Statement
@@ -2407,7 +2408,7 @@ Element.OdaDataSet.resultSetName=Result set name
 Element.OdaDataSet.publicDriverProperties=Public driver properties
 Element.OdaDataSet.privateDriverProperties=Private driver properties
 Element.OdaDataSet.privateDriverDesignState=Private driver design state
-Element.OdaDataSet.cachedRowCount=Cached row count
+
 
 #37 DesignElement ( Prefix Element.DesignElement )
 Element.DesignElement.customXml=Custom XML
@@ -2764,7 +2765,7 @@ Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" t
 Error.SemanticError.INVALID_SCALAR_PARAMETER_TYPE=Type scalar parameter "{0}" is not valid. Parameters within a cascading parameter group should be dynamic type.  
 Error.SemanticError.MISSING_TEMPLATE_PARAMETER_TYPE=The element {0} must define an "allowedType" explicitly. 
 Error.SemanticError.INCONSISTENT_TEMPLATE_PARAMETER_TYPE=The default element {1} in element {0} is not a kind of {2}.
-Error.SemanticError.INVALID_LIBRARY_REFERENCE=The library reference "{2}" of {0} "{1}" is invalid, for the referred structure does not exsit. 
+Error.SemanticError.INVALID_LIBRARY_REFERENCE=The library reference "{2}" of {0} "{1}" is invalid, for the referred structure does not exist. 
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
