Fix 119220 in Model sub-system.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2681,7 +2681,7 @@ Error.CustomMsgException.TRANSLATION_NOT_FOUND=The translation for locale "{0}" 
 
     
 #ExtendsException
-Error.ExtendsException.NOT_FOUND=The parent element "{0}" does not exsit.
+Error.ExtendsException.NOT_FOUND=The parent element "{0}" does not exist.
 Error.ExtendsException.WRONG_TYPE=The parent {0} is different element type with the target {1}.
 Error.ExtendsException.WRONG_EXTENSION_TYPE=The parent {0} is different extension type with the target {1}.
 Error.ExtendsException.CANT_EXTEND=The element "{0}" is not allowed to derive.
