Completed "describe" script/event handling in scripted data set

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -60,7 +60,7 @@ data.engine.BadOperandType=Unexpected operand data type: {0}
 data.engine.BadParameterCount=Incorrect number of parameters are supplied.
 data.engine.BadParameterType=One of the parameters has an incorrect data type.
 data.engine.NoIrrSolution=Cannot found a solution for the Irr function with given data.
-data.engine.BadFetchScriptReturnType=Fetch script for scripted data set must return a Boolean result.
+data.engine.ExpectBooleanReturnType={0} script for scripted data set must return a Boolean result.
 data.engine.BadIntervalUnit=Invalid Interval unit value: {0}
 data.engine.InvalidFieldName=Invalid field name: {0}
 data.engine.BadGroupKeyType=Group key has unsupported data type: {0}
@@ -123,6 +123,7 @@ data.engine.NoExpressionProcessorAvailable=No ExpressionProcessor available.
 data.engine.InconvertibleDatatype=The original dataType of value {0} is {1} which can not be converted to the assigned dataType {2}.
 data.engine.ConvertToDataTypeError={0} can not be converted to {1}.
 data.engine.NoRowUpdate=Data row cannot be updated at this time.
+data.engine.BadDataType=Data type is not supported.
 
 # oda consumer errors
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
