modified rom.def to get complied to engin's api

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2134,21 +2134,6 @@ Element.ReportItem.y=Y
 Element.ReportItem.height=Height
 Element.ReportItem.width=Width
 Element.ReportItem.visibility=Visibility  
-Element.ReportItem.onPrepare=On prepare
-Element.ReportItem.onPrepare.toolTip=TBD
-Element.ReportItem.onPrepare.handle=Handle
-Element.ReportItem.onPrepare.reportContext=Report context
-Element.ReportItem.onPrepare.object=Object
-Element.ReportItem.onCreate=On create  
-Element.ReportItem.onCreate.toolTip=Executed when the element is created in the Factory
-Element.ReportItem.onCreate.instance=Instance
-Element.ReportItem.onCreate.reportContext=Report context
-Element.ReportItem.onCreate.object=Object
-Element.ReportItem.onRender=On render  
-Element.ReportItem.onRender.toolTip=Executed when the element is prepared for rendering in the Presentation Engine
-Element.ReportItem.onRender.instance=Instance
-Element.ReportItem.onRender.reportContext=Report context
-Element.ReportItem.onRender.object=Object
 Element.ReportItem.paramBindings=Parameter bindings  
 Element.ReportItem.refTemplateParameter=Referred Template Parameter Definition
   
@@ -2158,9 +2143,39 @@ Element.Label.textID=Text key
 Element.Label.helpTextID=Help text key
 Element.Label.helpText=Help text
 Element.Label.action=Action
+Element.Label.onPrepare=On prepare
+Element.Label.onPrepare.handle=Label handle
+Element.Label.onPrepare.toolTip=TBD
+Element.Label.onPrepare.reportContext=Report context
+Element.Label.onPrepare.object=Object
+Element.Label.onCreate=On create
+Element.Label.onCreate.toolTip=TBD
+Element.Label.onCreate.instance=Instance
+Element.Label.onCreate.reportContext=Report contetxt
+Element.Label.onCreate.object=Object
+Element.Label.onRender=On render
+Element.Label.onRender.toolTip=TBD
+Element.Label.onRender.instance=Instance
+Element.Label.onRender.reportContext=Report context
+Element.Label.onRender.object=Object
   
 #12.Element.FreeForm  ( Prefix Element.FreeForm )
 Element.FreeForm.slot.reportItems=Report Items
+Element.FreeForm.onPrepare=On prepare
+Element.FreeForm.onPrepare.toolTip=TBD
+Element.FreeForm.onPrepare.handle=Free form handle
+Element.FreeForm.onPrepare.reportContext=Report context
+Element.FreeForm.onPrepare.object=Object
+Element.FreeForm.onCreate=On create  
+Element.FreeForm.onCreate.toolTip=Executed when the element is created in the Factory
+Element.FreeForm.onCreate.instance=Instance
+Element.FreeForm.onCreate.reportContext=Report context
+Element.FreeForm.onCreate.object=Object
+Element.FreeForm.onRender=On render  
+Element.FreeForm.onRender.toolTip=Executed when the element is prepared for rendering in the Presentation Engine
+Element.FreeForm.onRender.instance=Instance
+Element.FreeForm.onRender.reportContext=Report context
+Element.FreeForm.onRender.object=Object
   
 #12.Container  ( prefix  Element.Container )
 Element.Container.slot.reportItems=Report Items
@@ -2170,11 +2185,41 @@ Element.Data.valueExpr=Value expression
 Element.Data.helpText=Help text
 Element.Data.helpTextID=Help text key
 Element.Data.action=Action
+Element.Data.onPrepare=On prepare
+Element.Data.onPrepare.toolTip=TBD
+Element.Data.onPrepare.handle=Data handle
+Element.Data.onPrepare.reportContext=Report context
+Element.Data.onPrepare.object=Object
+Element.Data.onCreate=On create
+Element.Data.onCreate.toolTip=TBD
+Element.Data.onCreate.instance=Instance
+Element.Data.onCreate.reportContext=Report context
+Element.Data.onCreate.object=Object
+Element.Data.onRender=On render
+Element.Data.onRender.toolTip=TBD
+Element.Data.onRender.instance=Instance
+Element.Data.onRender.reportContext=Report context
+Element.Data.onRender.object=Object
   
 #14.Text  ( prefix  Element.Text )
 Element.Text.content=Content
 Element.Text.contentType=Content type
 Element.Text.contentID=Content key
+Element.Text.onPrepare=On prepare
+Element.Text.onPrepare.toolTip=TBD
+Element.Text.onPrepare.handle=Text handle
+Element.Text.onPrepare.reportContext=Report context
+Element.Text.onPrepare.object=Object
+Element.Text.onCreate=On create
+Element.Text.onCreate.toolTip=TBD
+Element.Text.onCreate.instance=Instance
+Element.Text.onCreate.reportContext=Report context
+Element.Text.onCreate.object=Object
+Element.Text.onRender=On render
+Element.Text.onRender.toolTip=TBD
+Element.Text.onRender.instance=Instance
+Element.Text.onRender.reportContext=Report context
+Element.Text.onRender.object=Object
   
 #15.ListingGroup  ( prefix  Element.ListingGroup )
 Element.ListingGroup.keyExpr=Key expression
@@ -2218,6 +2263,21 @@ Element.List.slot.header=Header
 Element.List.slot.groups=Groups
 Element.List.slot.detail=Detail
 Element.List.slot.footer=Footer
+Element.List.onPrepare=On prepare
+Element.List.onPrepare.toolTip=TBD
+Element.List.onPrepare.handle=List handle
+Element.List.onPrepare.reportContext=Report context
+Element.List.onPrepare.object=Object
+Element.List.onCreate=On create
+Element.List.onCreate.toolTip=TBD
+Element.List.onCreate.instance=Instance
+Element.List.onCreate.reportContext=Report context
+Element.List.onCreate.object=Object
+Element.List.onRender=On render
+Element.List.onRender.toolTip=TBD
+Element.List.onRender.instance=Instance
+Element.List.onRender.reportContext=Report context
+Element.List.onRender.object=Object
   
 #17.ListGroup  ( prefix  Element.ListGroup )
 Element.ListGroup.slot.header=Header
@@ -2232,6 +2292,21 @@ Element.Table.slot.groups=Groups
 Element.Table.slot.detail=Detail
 Element.Table.slot.footer=Footer
 Element.Table.slot.columns=Columns
+Element.Table.onPrepare=On prepare
+Element.Table.onPrepare.toolTip=TBD
+Element.Table.onPrepare.handle=Table handle
+Element.Table.onPrepare.reportContext=Report context
+Element.Table.onPrepare.object=Object
+Element.Table.onCreate=On create
+Element.Table.onCreate.toolTip=TBD
+Element.Table.onCreate.instance=Instance
+Element.Table.onCreate.reportContext=Report context
+Element.Table.onCreate.object=Object
+Element.Table.onRender=On render
+Element.Table.onRender.toolTip=TBD
+Element.Table.onRender.instance=Instance
+Element.Table.onRender.reportContext=Report context
+Element.Table.onRender.object=Object
   
 #19.TableGroup  ( prefix  Element.TableGroup )
 Element.TableGroup.slot.header=Header
@@ -2277,7 +2352,7 @@ Element.Cell.width=Width
 Element.Cell.eventHandlerClass=Event handler class
 Element.Cell.onPrepare=On prepare
 Element.Cell.onPrepare.toolTip=TBD
-Element.Cell.onPrepare.handle=Handle
+Element.Cell.onPrepare.handle=Cell handle
 Element.Cell.onPrepare.reportContext=Report context
 Element.Cell.onPrepare.object=Object
 Element.Cell.onCreate=On create
@@ -2305,22 +2380,100 @@ Element.Image.imageName=Image name
 Element.Image.valueExpr=Value exprssion
 Element.Image.typeExpr=Type exprssion
 Element.Image.action=Action
+Element.Image.onPrepare=On prepare
+Element.Image.onPrepare.toolTip=TBD
+Element.Image.onPrepare.handle=Image handle
+Element.Image.onPrepare.reportContext=Report context
+Element.Image.onPrepare.object=Object
+Element.Image.onCreate=On create
+Element.Image.onCreate.toolTip=TBD
+Element.Image.onCreate.instance=Instance
+Element.Image.onCreate.dataRow=Data row
+Element.Image.onCreate.reportContext=Report context
+Element.Image.onCreate.object=Object
+Element.Image.onRender=On render
+Element.Image.onRender.toolTip=TBD
+Element.Image.onRender.instance=Instance
+Element.Image.onRender.reportContext=Report context
+Element.Image.onRender.object=Object
   
 #24.Grid  ( prefix  Element.Grid )
 Element.Grid.slot.columns=Columns
 Element.Grid.slot.rows=Rows
+Element.Grid.onPrepare=On prepare
+Element.Grid.onPrepare.toolTip=TBD
+Element.Grid.onPrepare.handle=Grid handle
+Element.Grid.onPrepare.reportContext=Report context
+Element.Grid.onPrepare.object=Object
+Element.Grid.onCreate=On create
+Element.Grid.onCreate.toolTip=TBD
+Element.Grid.onCreate.instance=Instance
+Element.Grid.onCreate.dataRow=Data row
+Element.Grid.onCreate.reportContext=Report context
+Element.Grid.onCreate.object=Object
+Element.Grid.onRender=On render
+Element.Grid.onRender.toolTip=TBD
+Element.Grid.onRender.instance=Instance
+Element.Grid.onRender.reportContext=Report context
+Element.Grid.onRender.object=Object
   
 #25.Line  ( prefix  Element.Line )
 Element.Line.orientation=Orientation
+Element.Line.onPrepare=On prepare
+Element.Line.onPrepare.toolTip=TBD
+Element.Line.onPrepare.handle=Line handle
+Element.Line.onPrepare.reportContext=Report context
+Element.Line.onPrepare.object=Object
+Element.Line.onCreate=On create  
+Element.Line.onCreate.toolTip=Executed when the element is created in the Factory
+Element.Line.onCreate.instance=Instance
+Element.Line.onCreate.reportContext=Report context
+Element.Line.onCreate.object=Object
+Element.Line.onRender=On render  
+Element.Line.onRender.toolTip=Executed when the element is prepared for rendering in the Presentation Engine
+Element.Line.onRender.instance=Instance
+Element.Line.onRender.reportContext=Report context
+Element.Line.onRender.object=Object
   
 #26.TextData  ( prefix  Element.TextData )
 Element.TextData.valueExpr=Value expression
 Element.TextData.contentType=Content type
+Element.TextData.onPrepare=On prepare
+Element.TextData.onPrepare.toolTip=TBD
+Element.TextData.onPrepare.handle=Text Data handle
+Element.TextData.onPrepare.reportContext=Report Context
+Element.TextData.onPrepare.object=Oject
+Element.TextData.onCreate=On create
+Element.TextData.onCreate.toolTip=TBD
+Element.TextData.onCreate.instance=Instance
+Element.TextData.onCreate.dataRow=Data row
+Element.TextData.onCreate.reportContext=Report context
+Element.TextData.onCreate.object=Object
+Element.TextData.onRender=On render
+Element.TextData.onRender.toolTip=TBD
+Element.TextData.onRender.instance=Instance
+Element.TextData.onRender.reportContext=Report context
+Element.TextData.onRender.object=Object
 
 #27.ExtendedItem   ( prefix  Element.ExtendedItem )
 Element.ExtendedItem.extensionName=Extension name
 Element.ExtendedItem.extension=Extension name
 Element.ExtendedItem.filter=Filter
+Element.ExtendedItem.onPrepare=On prepare
+Element.ExtendedItem.onPrepare.toolTip=TBD
+Element.ExtendedItem.onPrepare.handle=Extended item handle
+Element.ExtendedItem.onPrepare.reportContext=Report context
+Element.ExtendedItem.onPrepare.object=Object
+Element.ExtendedItem.onCreate=On create  
+Element.ExtendedItem.onCreate.toolTip=Executed when the element is created in the Factory
+Element.ExtendedItem.onCreate.instance=Instance
+Element.ExtendedItem.onCreate.reportContext=Report context
+Element.ExtendedItem.onCreate.object=Object
+Element.ExtendedItem.onRender=On render  
+Element.ExtendedItem.onRender.toolTip=Executed when the element is prepared for rendering in the Presentation Engine
+Element.ExtendedItem.onRender.instance=Instance
+Element.ExtendedItem.onRender.reportContext=Report context
+Element.ExtendedItem.onRender.object=Object
 
 #28.DataSource ( prefix Element.DataSource )
 Element.DataSource.beforeOpen=Before open
@@ -2428,6 +2581,23 @@ Element.TemplateParameterDefinition.slot.default=Default
 #40 TemplateElement ( Prefix Element.TemplateElement )
 Element.TemplateElement.name=Name
 Element.TemplateElement.refTemplateParameter=Ref Template Parameter
+
+#41 Rectangle  ( prefix  Element.Rectangle )
+Element.Rectangle.onPrepare=On prepare
+Element.Rectangle.onPrepare.toolTip=TBD
+Element.Rectangle.onPrepare.handle=Rectangle handle
+Element.Rectangle.onPrepare.reportContext=Report context
+Element.Rectangle.onPrepare.object=Object
+Element.Rectangle.onCreate=On create  
+Element.Rectangle.onCreate.toolTip=Executed when the element is created in the Factory
+Element.Rectangle.onCreate.instance=Instance
+Element.Rectangle.onCreate.reportContext=Report context
+Element.Rectangle.onCreate.object=Object
+Element.Rectangle.onRender=On render  
+Element.Rectangle.onRender.toolTip=Executed when the element is prepared for rendering in the Presentation Engine
+Element.Rectangle.onRender.instance=Instance
+Element.Rectangle.onRender.reportContext=Report context
+Element.Rectangle.onRender.object=Object
 
 ###########################################################
 # Predefined style
