Fix 120215 -- support property bindings.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1622,6 +1622,7 @@ Structure.StringFormatValue=String Format Value
 Structure.DateTimeFormatValue=Date Time Format Value
 Structure.UserMethod=User Method
 Structure.DataSourceParamBinding=Data Source parameter binding
+Structure.PropertyBinding=Property Binding
 
 #0.MapRule
 Structure.MapRule.testExpr=TestExpression
@@ -1802,6 +1803,11 @@ Structure.UserMethod.name=Name
 Structure.DataSourceParamBinding.dataSourceName=Data Source name
 Structure.DataSourceParamBinding.paramBindings=Parameter property bindings
 
+#24. PropertyBinding
+Structure.PropertyBinding.name=Name
+Structure.PropertyBinding.id=Element id
+Structure.PropertyBinding.value=Value
+
 ###########################################################
 # Element names
 
@@ -1875,6 +1881,7 @@ Element.Module.includeResource=Include resource
 Element.Module.base=Base
 Element.Module.units=Units
 Element.Module.theme=Theme
+Element.Module.propertyBindings=Property bindings
 
 # Library ( Prefix = Element.Library )
 Element.Library.slot.styles=Styles
@@ -2936,6 +2943,8 @@ Error.SemanticError.INVALID_SCALAR_PARAMETER_TYPE=Type scalar parameter "{0}" is
 Error.SemanticError.MISSING_TEMPLATE_PARAMETER_TYPE=The element {0} must define an "allowedType" explicitly. 
 Error.SemanticError.INCONSISTENT_TEMPLATE_PARAMETER_TYPE=The default element {1} in element {0} is not a kind of {2}.
 Error.SemanticError.INVALID_LIBRARY_REFERENCE=The library reference "{2}" of {0} "{1}" is invalid, for the referred structure does not exist. 
+Error.SemanticError.INVALID_PROPERTY_BINDING_ID=The property binding "{1}" in {0} refers a non-existing element.
+Error.SemanticError.PROPERTY_BINDING_FORBIDDEN=The element "{0}" is not in the design tree, so it can not set any property binding.
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
