Add the match operator in the filter list

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -383,6 +383,7 @@ Choices.filterOperator.bottom-n=Bottom n
 Choices.filterOperator.top-percent=Top Percent
 Choices.filterOperator.bottom-percent=Bottom Percent
 Choices.filterOperator.any=Any
+Choices.filterOperator.match=Match
 
 #53. propertyMaskType
 Choices.propertyMaskType.change=Change
