Moved script evaluation utils from birt.data to birt.core

--- a/core/org.eclipse.birt.core/src/org/eclipse/birt/core/i18n/Messages.properties
+++ b/core/org.eclipse.birt.core/src/org/eclipse/birt/core/i18n/Messages.properties
@@ -5,3 +5,5 @@
 
 INVALID_TYPE=Invalid type
 CONVERT_FAILS=Can not convert it to {0}.
+
+birt.core.JavascriptError=Error evaluating Javascript expression. Script engine error: {0}\n Script source: {1}, line: {2}, text:\n{3}
