Revise the styled element get factory property mechanism to return the vaue from parent

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1581,6 +1581,8 @@ Class.GlobalBirt.CurrentPage=Current Page Number
 Class.GlobalBirt.CurrentPage.toolTip=Returns the number of the current page.
 Class.GlobalBirt.TotalPage=Total Page Number
 Class.GlobalBirt.TotalPage.toolTip=Returns the number of the total pages.
+Class.GlobalBirt.this=This Object
+Class.GlobalBirt.this.toolTip=Represent this object
 
 #30 DataSource
 
