Fixed some error messages

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -10,8 +10,8 @@ Error.Msg001={0} not found in {0}.
 # DTE error code
 data.engine.UndefinedDataSource=Data source {0} is not defined
 data.engine.UndefinedDataSet=Data set {0} is not defined
-data.engine.UnsupportedDataSourceType=Data source '{0}' is of an unsupported type
-data.engine.UnsupportedDataSetType=Data set '{0}' is of an unsupported type
+data.engine.UnsupportedDataSourceType=Data source [{0}] is of an unsupported type
+data.engine.UnsupportedDataSetType=Data set [{0}] is of an unsupported type
 data.engine.UnsupportedGroupOnClobAndBLOB=Group on Clob or Blob data [{0}] is unsupported
 data.engine.UnsupportedSortOnClobAndBLOB=Sort on Clob or Blob data [{0}] is unsupported
 
@@ -20,7 +20,7 @@ data.engine.InvalidAggrGroup=Invalid grouping level for aggregate function: {0}
 data.engine.WrongNumAggrArgs=Wrong number of arguments to aggregate function: {0}
 
 data.engine.DupPropertyName=Found duplicate property name: {0}
-data.engine.NoSubQueryName=Cannot find subquery with name '{0}'
+data.engine.NoSubQueryName=Cannot find subquery with name [{0}]
 
 data.engine.DataSourceMissingExtId=Missing extension id in definition of data source {0}
 data.engine.NullGroupStart=The group start value cannot be null
@@ -71,7 +71,7 @@ data.engine.InvalidTopBottomNArgument=The argument of TopN/BottomN filters must 
 data.engine.InvalidTopBottomPercentArgument=The argument of TopPercent/BottomPercent filters must be both positive and less than/equal to 100;
 data.engine.BadAggrFuncParam=Illegal parameter for aggregate function {0}
 data.engine.ResetRateGuess=User should reset a new rate guess
-data.engine.UnsupportedCondOp=Conditional operator '{0}' is not supported
+data.engine.UnsupportedCondOp=Conditional operator #{0} is not supported
 data.engine.EmptyExpression=The expression cannot be null or empty
 data.engine.GroupFilteringIsNotAllowedInGiverQuery=Group filtering cannot coexist with computed columns/filters/sorts/groups that are using Aggregations.
 
