--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -4,84 +4,84 @@
 ###########################################################
 
 #ODA-JDBC error code
-odajdbc.CannotCloseConn=Failed to close the connection
-odajdbc.ConnCommitError=Database access error occurs or Connection object is in auto-commit mode
-odajdbc.CannotGetConnMetaData=Cannot get Connection metadata
-odajdbc.CannotGetConn=Failed to get Connection
-odajdbc.ConnRollbackError=Connection rollback error
+odajdbc.CannotCloseConn=Failed to close the connection.
+odajdbc.ConnCommitError=A database access error occurred or a connection object is in auto-commit mode.
+odajdbc.CannotGetConnMetaData=Cannot get connection metadata.
+odajdbc.CannotGetConn=Failed to get connection.
+odajdbc.ConnRollbackError=Connection rollback error.
 
-odajdbc.CannotGetMaxStatements=Cannot get the max number of statements from database metadata
-odajdbc.CannotGetMaxConnections=Cannot get the max number of connections from database metadata
+odajdbc.CannotGetMaxStatements=Cannot get the maximum number of statements from database metadata.
+odajdbc.CannotGetMaxConnections=Cannot get the maximum number of connections from database metadata.
 
-odajdbc.CannotGetDatabaseMajorVersion=Cannot get the database major version
-odajdbc.CannotGetDatabaseMinorVersion=Cannot get the database minor version
-odajdbc.CannotGetDataSourceProductName=Cannot get the datasource product name
-odajdbc.CannotGetDataSourceProductVersion=Cannot get the datasource product version
-odajdbc.CannotGetSQLStateType=Cannot get the SQL state type
+odajdbc.CannotGetDatabaseMajorVersion=Cannot get the database major version.
+odajdbc.CannotGetDatabaseMinorVersion=Cannot get the database minor version.
+odajdbc.CannotGetDataSourceProductName=Cannot get the data source product name.
+odajdbc.CannotGetDataSourceProductVersion=Cannot get the data source product version.
+odajdbc.CannotGetSQLStateType=Cannot get the SQL state type.
 odajdbc.CannotParseURL=The selected driver cannot parse the given url.
 odajdbc.NoSuitableDriver=No suitable driver.
 
-odajdbc.CannotGetParameterCount=Cannot get parameter count
-odajdbc.CannotGetParameterMode=Cannot get parameter mode
-odajdbc.CannotGetParameterType=Cannot get parameter type
-odajdbc.CannotGetParameterTypeName=Cannot get parameter type name
-odajdbc.CannotGetPrecision=Cannot get precision
-odajdbc.CannotGetScale=Cannot get Scale
-odajdbc.CannotDetermineSupportForNull=Cannot determine whether the parameter is nullable
+odajdbc.CannotGetParameterCount=Cannot get parameter count.
+odajdbc.CannotGetParameterMode=Cannot get parameter mode.
+odajdbc.CannotGetParameterType=Cannot get parameter type.
+odajdbc.CannotGetParameterTypeName=Cannot get parameter type name.
+odajdbc.CannotGetPrecision=Cannot get precision.
+odajdbc.CannotGetScale=Cannot get scale.
+odajdbc.CannotDetermineSupportForNull=Cannot determine whether the parameter is nullable.
 
-odajdbc.CannotGetResultSet=Cannot get resultset
-odajdbc.CannotGetResultSetMetadata=Cannot get resultset metadata
-odajdbc.CannotCloseResultSet=Cannot close resultset
-odajdbc.CursorDownError=Cannot move down to next row in result set
-odajdbc.ResultSetCannotGetStringValue=Cannot get String value in result set
-odajdbc.ResultSetCannotGetIntValue=Cannot get Integer value in result set
-odajdbc.ResultSetCannotGetDoubleValue=Cannot get Double value in result set
-odajdbc.ResultSetCannotGetBigDecimalValue=Cannot get BigDecimal value in result set
-odajdbc.ResultSetCannotGetDateValue=Cannot get Date value in result set
-odajdbc.ResultSetCannotGetTimeValue=Cannot get Time value in result set
-odajdbc.ResultSetCannotGetTimeStampValue=Cannot get Timestamp value in result set
-odajdbc.ResultSetCannotGetBlobValue=Cannot get Blob value in result set
-odajdbc.ResultSetCannotGetClobValue=Cannot get Clob value in result set
-odajdbc.ResultSetDetermineNull=Cannot determine isNull value in result set
-odajdbc.ResultSetCannotFindColumn=Cannot found column in result set
+odajdbc.CannotGetResultSet=Cannot get the result set.
+odajdbc.CannotGetResultSetMetadata=Cannot get result set metadata.
+odajdbc.CannotCloseResultSet=Cannot close the result set.
+odajdbc.CursorDownError=Cannot move down to next row in the result set.
+odajdbc.ResultSetCannotGetStringValue=Cannot get string value in the result set.
+odajdbc.ResultSetCannotGetIntValue=Cannot get integer value in the result set.
+odajdbc.ResultSetCannotGetDoubleValue=Cannot get double value in the result set.
+odajdbc.ResultSetCannotGetBigDecimalValue=Cannot get BigDecimal value in the result set.
+odajdbc.ResultSetCannotGetDateValue=Cannot get date value in the result set.
+odajdbc.ResultSetCannotGetTimeValue=Cannot get time value in the result set.
+odajdbc.ResultSetCannotGetTimeStampValue=Cannot get timestamp value in the result set.
+odajdbc.ResultSetCannotGetBlobValue=Cannot get BLOB value in the result set.
+odajdbc.ResultSetCannotGetClobValue=Cannot get CLOB value in the result set.
+odajdbc.ResultSetDetermineNull=Cannot determine isNull value in the result set.
+odajdbc.ResultSetCannotFindColumn=Cannot find a column in the result set.
 
-odajdbc.CannotGetColumnCount=Cannot get column count
-odajdbc.CannotGetColumnName=Cannot get column name
-odajdbc.CannotGetColumnLabel=Cannot get column label
-odajdbc.CannotGetColumnType=Cannot get column type
-odajdbc.CannotGetColumnTypeName=Cannot get column type name
-odajdbc.CannotGetColumnDisplaySize=Cannot get column display size
-odajdbc.CannotGetResultSetMetaDataPrecision=Cannot get resultset metadata precision
-odajdbc.CannotGetResultSetMetaDataScale=Cannot get resultset meatdata scale
-odajdbc.CannotDetermineColumnSupportForNull=Cannot determine if column supports null values
+odajdbc.CannotGetColumnCount=Cannot get a column count.
+odajdbc.CannotGetColumnName=Cannot get the column name.
+odajdbc.CannotGetColumnLabel=Cannot get the column label.
+odajdbc.CannotGetColumnType=Cannot get column type.
+odajdbc.CannotGetColumnTypeName=Cannot get the column type name.
+odajdbc.CannotGetColumnDisplaySize=Cannot get the column display size.
+odajdbc.CannotGetResultSetMetaDataPrecision=Cannot get result set metadata precision.
+odajdbc.CannotGetResultSetMetaDataScale=Cannot get result set metadata scale.
+odajdbc.CannotDetermineColumnSupportForNull=Cannot determine if column supports null values.
 
-odajdbc.StatementCannotPrepared=Error preparing SQL statement
-odajdbc.CannotClosePreparedStatement=Cannot close preparedStatement
-odajdbc.CannotGetPreparedStatementMetadata=Cannot get preparedStatement metadata
-odajdbc.ResultSetCannotReturn=SQL statement does not return a ResultSet object
-odajdbc.QueryExecuteFail=SQL statement does not return a ResultSet object or an update count
-odajdbc.PrepareStatement.CannotSetIntValue=Cannot set preparedStatement parameter int value
-odajdbc.PrepareStatement.CannotSetDoubleValue=Cannot set preparedStatement parameter Double value
-odajdbc.PrepareStatement.CannotSetBigDecimalValue=Cannot set preparedStatement parameter BigDecimal value
-odajdbc.PrepareStatement.CannotSetStringValue=Cannot set preparedStatement parameter String value
-odajdbc.PrepareStatement.CannotSetDateValue=Cannot set preparedStatement parameter Date value
-odajdbc.PrepareStatement.CannotSetTimeValue=Cannot set preparedStatement parameter Time value
-odajdbc.PrepareStatement.CannotSetTimestampValue=Cannot set preparedStatement parameter Timestamp value
-odajdbc.PrepareStatement.CannotGetParameterType=Cannot get the paramter type from parameter metadata
-odajdbc.CannotGetParameterMetadata=Cannot retrieve the parameter metadata
-odajdbc.ClearParametersError=Error clearing current parameter value
+odajdbc.StatementCannotPrepared=Error preparing SQL statement.
+odajdbc.CannotClosePreparedStatement=Cannot close preparedStatement.
+odajdbc.CannotGetPreparedStatementMetadata=Cannot get preparedStatement metadata.
+odajdbc.ResultSetCannotReturn=SQL statement does not return a ResultSet object.
+odajdbc.QueryExecuteFail=SQL statement does not return a ResultSet object or an update count.
+odajdbc.PrepareStatement.CannotSetIntValue=Cannot set preparedStatement parameter int value.
+odajdbc.PrepareStatement.CannotSetDoubleValue=Cannot set preparedStatement parameter double value.
+odajdbc.PrepareStatement.CannotSetBigDecimalValue=Cannot set preparedStatement parameter BigDecimal value.
+odajdbc.PrepareStatement.CannotSetStringValue=Cannot set preparedStatement parameter string value.
+odajdbc.PrepareStatement.CannotSetDateValue=Cannot set preparedStatement parameter date value.
+odajdbc.PrepareStatement.CannotSetTimeValue=Cannot set preparedStatement parameter time value.
+odajdbc.PrepareStatement.CannotSetTimestampValue=Cannot set preparedStatement parameter timestamp value.
+odajdbc.PrepareStatement.CannotGetParameterType=Cannot get the paramter type from parameter metadata.
+odajdbc.CannotGetParameterMetadata=Cannot retrieve the parameter metadata.
+odajdbc.ClearParametersError=Error clearing current parameter value.
 
 #used in assert error
-odajdbc.driver.ConnNotOpen=Connection is not open
-odajdbc.driver.DriverMissingProperties=Missing properties in Connection.open(Properties)
-odajdbc.driver.ParameterMetadataCannotNull=ParameterMetaData cannot be null
-odajdbc.driver.ResultSetCannotNull=ResultSet cannot be null
-odajdbc.driver.ResultSetMetadataCannotNull=ResultSetMetaData cannot be null
-odajdbc.driver.StatementCannotNull=Statement needs to be prepared before this operation
+odajdbc.driver.ConnNotOpen=Connection is not open.
+odajdbc.driver.DriverMissingProperties=Missing properties in Connection.open(Properties).
+odajdbc.driver.ParameterMetadataCannotNull=ParameterMetaData cannot be null.
+odajdbc.driver.ResultSetCannotNull=ResultSet cannot be null.
+odajdbc.driver.ResultSetMetadataCannotNull=ResultSetMetaData cannot be null.
+odajdbc.driver.StatementCannotNull=Statement needs to be prepared before this operation.
 
 odajdbc.CannotGetMaxQueries=Cannot get MaxStatements from underlying JDBC connection.
-odajdbc.CannotSetQueryTimeout=Cannot set query timeout on underlying JDBC Statement.
-odajdbc.BadQueryProperty=Query property {0} is not supported.
-odajdbc.CannotLoadDriverClass=Cannot load JDBC Driver class: [{0}]. 
-odajdbc.CannotInstantiateDriverClass=Cannot create instance of JDBC Driver class: [{0}].
-odajdbc.CannotInstantiateFactory=Cannot create instance of connection factory class [{0}] defined in the extension for driver class [{1}].
+odajdbc.CannotSetQueryTimeout=Cannot set query timeout on underlying JDBC statement.
+odajdbc.BadQueryProperty=Query property is not supported: {0}
+odajdbc.CannotLoadDriverClass=Cannot load JDBC Driver class: {0} 
+odajdbc.CannotInstantiateDriverClass=Cannot create instance of JDBC Driver class: {0}
+odajdbc.CannotInstantiateFactory=Cannot create instance of connection factory class "{0}" defined in the extension for driver class "{1}".
