--- a/data/org.eclipse.birt.report.data.oda.xml/src/org/eclipse/birt/report/data/oda/xml/i18n/messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml/src/org/eclipse/birt/report/data/oda/xml/i18n/messages.properties
@@ -1,7 +1,7 @@
 Connection.PropertiesMissing=Some connection properties are missing.
-Constants.DriverName=XML-ODA Driver
+Constants.DriverName=ODA XML Driver
 ResultSet.ResultSetClosed=ResultSet is closed
 Query.QueryHasNotBeenPrepared=The query has not been prepared yet.
 Query.ResultSetClosed=ResultSet is closed
-RelationInformation.InputStringCannotBeNull=\ The input string cannot be null/blank. 
+RelationInformation.InputStringCannotBeNull=The input string cannot be null or blank. 
 RelationInformation.InvalidDataTypeName=The given data type name is invalid.
