Fixed bug 121683 type error in ROM.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1151,8 +1151,8 @@ Class.DataSet.extensionProperties=extensionProperties
 Class.DataSet.extensionProperties.toolTip=Provides the ODA public properties for an ODA data set
 Class.DataSet.privateProperties=privateProperties
 Class.DataSet.privateProperties.toolTip=Provides the private properties for an ODA data set
-Class.DataSet.DataSource=DataSource
-Class.DataSet.DataSource.toolTip=Returns the DataSource object used by this data set.
+Class.DataSet.dataSource=DataSource
+Class.DataSet.dataSource.toolTip=Returns the DataSource object used by this data set.
 
 
 #18. DataRow
