--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2245,21 +2245,6 @@ Element.ListingGroup.eventHandlerClass=Event handler class
 Element.ListingGroup.pageBreakBefore=Page break before
 Element.ListingGroup.pageBreakAfter=Page break after
 Element.ListingGroup.filter=Filter
-Element.ListingGroup.onPrepare=On prepare
-Element.ListingGroup.onPrepare.toolTip=TBD
-Element.ListingGroup.onPrepare.handle=Handle
-Element.ListingGroup.onPrepare.reportContext=Report context
-Element.ListingGroup.onPrepare.object=Object
-Element.ListingGroup.onCreate=On create
-Element.ListingGroup.onCreate.toolTip=TBD
-Element.ListingGroup.onCreate.instance=Instance
-Element.ListingGroup.onCreate.reportContext=Report context
-Element.ListingGroup.onCreate.object=Object
-Element.ListingGroup.onRender=On render
-Element.ListingGroup.onRender.toolTip=TBD
-Element.ListingGroup.onRender.instance=Instance
-Element.ListingGroup.onRender.reportContext=Report context
-Element.ListingGroup.onRender.object=Object
 Element.ListingGroup.onStart=On start
 Element.ListingGroup.onStart.toolTip=Called after the data set is open but before the header band is created, but before the first row is retrieved from the data set for this element
 Element.ListingGroup.onRow=On row
@@ -2292,6 +2277,21 @@ Element.List.onRender.object=Object
 #17.ListGroup  ( prefix  Element.ListGroup )
 Element.ListGroup.slot.header=Header
 Element.ListGroup.slot.footer=Footer
+Element.ListGroup.onPrepare=On prepare
+Element.ListGroup.onPrepare.toolTip=TBD
+Element.ListGroup.onPrepare.handle=Handle
+Element.ListGroup.onPrepare.reportContext=Report context
+Element.ListGroup.onPrepare.object=Object
+Element.ListGroup.onCreate=On create
+Element.ListGroup.onCreate.toolTip=TBD
+Element.ListGroup.onCreate.instance=Instance
+Element.ListGroup.onCreate.reportContext=Report context
+Element.ListGroup.onCreate.object=Object
+Element.ListGroup.onRender=On render
+Element.ListGroup.onRender.toolTip=TBD
+Element.ListGroup.onRender.instance=Instance
+Element.ListGroup.onRender.reportContext=Report context
+Element.ListGroup.onRender.object=Object
   
 #18.Table  ( prefix  Element.Table )
 Element.Table.caption=Caption
@@ -2321,6 +2321,21 @@ Element.Table.onRender.object=Object
 #19.TableGroup  ( prefix  Element.TableGroup )
 Element.TableGroup.slot.header=Header
 Element.TableGroup.slot.footer=Footer
+Element.TableGroup.onPrepare=On prepare
+Element.TableGroup.onPrepare.toolTip=TBD
+Element.TableGroup.onPrepare.handle=Handle
+Element.TableGroup.onPrepare.reportContext=Report context
+Element.TableGroup.onPrepare.object=Object
+Element.TableGroup.onCreate=On create
+Element.TableGroup.onCreate.toolTip=TBD
+Element.TableGroup.onCreate.instance=Instance
+Element.TableGroup.onCreate.reportContext=Report context
+Element.TableGroup.onCreate.object=Object
+Element.TableGroup.onRender=On render
+Element.TableGroup.onRender.toolTip=TBD
+Element.TableGroup.onRender.instance=Instance
+Element.TableGroup.onRender.reportContext=Report context
+Element.TableGroup.onRender.object=Object
   
 #20.Column  ( prefix  Element.Column )
 Element.Column.repeat=Repeat
