Change the implementation of XML driver.

--- a/data/org.eclipse.birt.report.data.oda.xml/src/org/eclipse/birt/report/data/oda/xml/i18n/messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml/src/org/eclipse/birt/report/data/oda/xml/i18n/messages.properties
@@ -3,5 +3,6 @@ Constants.DriverName=ODA XML Driver
 ResultSet.ResultSetClosed=ResultSet is closed.
 Query.QueryHasNotBeenPrepared=The query has not been prepared yet.
 Query.ResultSetClosed=ResultSet is closed.
+Query.InvalidQueryText=The query text is invalid.
 RelationInformation.InputStringCannotBeNull=The input string cannot be null or blank. 
 RelationInformation.InvalidDataTypeName=The provided data type name is invalid.
