Remove the Birt object class definitions in ROM

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1092,7 +1092,8 @@ Class.Report.dataSources=dataSources
 Class.Report.dataSources.toolTip=Returns an array of data sources (connections) defined in the report
 Class.Report.config=config
 Class.Report.config.toolTip=Returns an array of configuration variables available to the report
-
+Class.Report.reportContext=reportContext
+Class.Report.reportContext.toolTip=The context related to this reprot
 
 #15. ReportDoc
 
