Check the if lib elements have been used by the report before drop library

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1584,6 +1584,8 @@ Class.GlobalBirt.TotalPage=Total Page Number
 Class.GlobalBirt.TotalPage.toolTip=Returns the number of the total pages.
 Class.GlobalBirt.this=This Object
 Class.GlobalBirt.this.toolTip=Represent this object
+Class.GlobalBirt.appContext=AppContext
+Class.GlobalBirt.appContext.toolTip=The context related to this report
 
 #30 DataSource
 
