--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -3057,6 +3057,6 @@ Error.StyleSheetParserException.INVALID_SIMPLE_CSSPROPERTY_VALUE=The value "{1}"
 Error.TemplateException.INVALID_TEMPLATE_ELEMENT_TYPE=The {0} is not a report item or data set element, so it can not be transformed to a template element.
 Error.TemplateException.TRANSFORM_TO_REPORT_ITEM_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be transformed to a report item.
 Error.TemplateException.TRANSFORM_TO_DATA_SET_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be transformed to a data set.
-Error.TemplateException.REVERT_TO_TEMPLATE_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be reverted to a template element.
+Error.TemplateException.REVERT_TO_TEMPLATE_FORBIDDEN=The {0} has no explicit template parameter definition or it is a virtual element, so it can not be reverted to a template element.
 Error.TemplateException.CREATE_TEMPLATE_ELEMENT_FORBIDDEN=The {0} is not in the report, so it can not do any transformation.
 Error.TemplateException.TEMPLATE_ELEMENT_NOT_SUPPORTED=The template elements are not supported in libraries.
