--- a/core/org.eclipse.birt.core/src/org/eclipse/birt/core/i18n/Messages.properties
+++ b/core/org.eclipse.birt.core/src/org/eclipse/birt/core/i18n/Messages.properties
@@ -3,7 +3,7 @@
 
 ###########################################################
 
-INVALID_TYPE=Invalid type
-CONVERT_FAILS=Can not convert it to {0}.
+INVALID_TYPE=Invalid data type.
+CONVERT_FAILS=Can not convert the value of {0} to {1} type.
 
 birt.core.JavascriptError=Error evaluating Javascript expression. Script engine error: {0}\n Script source: {1}, line: {2}, text:\n{3}
