--- a/data/org.eclipse.birt.report.data.oda.xml/src/org/eclipse/birt/report/data/oda/xml/i18n/messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml/src/org/eclipse/birt/report/data/oda/xml/i18n/messages.properties
@@ -1,4 +1,5 @@
 Connection.PropertiesMissing=Some connection properties are missing.
+Connection.InvalidAppContext=Invalid AppContext.
 Constants.DriverName=ODA XML Driver
 ResultSet.ResultSetClosed=ResultSet is closed.
 Query.QueryHasNotBeenPrepared=The query has not been prepared yet.
