--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2926,7 +2926,7 @@ Error.MetaDataReaderException.META_DATA_ERROR=The meta-data is invalid.
 #LibraryException
 Error.LibraryException.LIBRARY_NOT_FOUND=The library with the namespace "{0}" is not found.
 Error.LibraryException.DUPLICATE_LIBRARY_NAMESPACE=The library namespace "{0}" exists already.
-Error.LibraryException.LIBRARY_INCLUDED_RECURSIVELY=The library withe the namespace "{0}" is included recursively.
+Error.LibraryException.LIBRARY_INCLUDED_RECURSIVELY=The library with the namespace "{0}" is included recursively.
 Error.LibraryException.LIBRARY_HAS_DESCENDENTS=The library "{0}" can no be dropped because it has descendents "{1}" in the current module.
 Error.LibraryException.LIBRARY_ALREADY_INCLUDED=The library "{0}" has already been included, a library can not be added twice.
 
