Adds operators for map operators and highlight operators.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -162,6 +162,11 @@ Choices.mapOperator.isNotNull=Is Not Null
 Choices.mapOperator.isTrue=Is True
 Choices.mapOperator.isFalse=Is False
 Choices.mapOperator.like=Like
+Choices.mapOperator.top-n=Top n
+Choices.mapOperator.bottom-n=Bottom n
+Choices.mapOperator.top-percent=Top Percent
+Choices.mapOperator.bottom-percent=Bottom Percent
+Choices.mapOperator.match=Match
 Choices.mapOperator.any=Any
   
 #15.imageRefType
