Fix 122850 -- master page can not contain table/list in any level.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2859,6 +2859,7 @@ Error.SemanticError.INCONSISTENT_TEMPLATE_PARAMETER_TYPE=The default element {1}
 Error.SemanticError.INVALID_LIBRARY_REFERENCE=The library reference "{2}" of {0} "{1}" is invalid, for the referred structure does not exist. 
 Error.SemanticError.INVALID_PROPERTY_BINDING_ID=The property binding "{1}" in {0} refers a non-existing element.
 Error.SemanticError.PROPERTY_BINDING_FORBIDDEN=The element "{0}" is not in the design tree, so it can not set any property binding.
+Error.SemanticError.INVALID_MASTER_PAGE_CONTEXT_CONTAINMENT=Table or list is not allowed directly or indirectly inside the master page "{0}". 
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
