--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -78,6 +78,8 @@ data.engine.GroupFilteringIsNotAllowedInGiverQuery=Group filtering cannot coexis
 #computed column value
 data.engine.BadCompColExpr=The expression for computed column "{0}" is not valid.
 data.engine.CompCol.WrongDataType=The data type of computed column "{0}" is {1}, but one of its value is "{2}", which cannot be converted to {1}.
+data.engine.ScriptResult.WrongDataType=The data type of script expression result is {0}, but one of its value is "{1}", which cannot be converted to {0}.
+
 data.engine.BadFilterExpr=The filter expression "{0}" is not valid.
 
 #clob and blob error
