Update the message to fix 123887 about the class Total.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1327,80 +1327,80 @@ Class.Total.OVERALL=OVERALL
 Class.Total.OVERALL.toolTip=A constant used for the group argument that requests the overall total for the data set
 Class.Total.sum=sum
 Class.Total.sum.toolTip=The sum of a sequence of numbers
-Class.Total.sum.expr=expr
+Class.Total.sum.expr=value
 Class.Total.sum.filter=filter
-Class.Total.sum.group=group
+Class.Total.sum.group=group_level
 Class.Total.runningSum=runningSum
 Class.Total.runningSum.toolTip=Similar to sum, but shows the running total to a given point in the report
-Class.Total.runningSum.expr=expr
+Class.Total.runningSum.expr=value
 Class.Total.runningSum.filter=filter
-Class.Total.runningSum.group=group
+Class.Total.runningSum.group=group_level
 Class.Total.count=count
 Class.Total.count.toolTip=The count of rows
 Class.Total.count.filter=filter
-Class.Total.count.group=group
+Class.Total.count.group=group_level
 Class.Total.countDistinct=countDistinct
 Class.Total.countDistinct.toolTip=The count of distinct values
-Class.Total.countDistinct.expr=expr
+Class.Total.countDistinct.expr=value
 Class.Total.countDistinct.filter=filter
-Class.Total.countDistinct.group=group
+Class.Total.countDistinct.group=group_level
 Class.Total.max=max
 Class.Total.max.toolTip=The maximum value of a sequence of numbers, strings or dates
-Class.Total.max.expr=expr
+Class.Total.max.expr=value
 Class.Total.max.filter=filter
-Class.Total.max.group=group
+Class.Total.max.group=group_level
 Class.Total.min=min
 Class.Total.min.toolTip=The minimum value of a sequence of numbers, strings or dates
-Class.Total.min.expr=expr
+Class.Total.min.expr=value
 Class.Total.min.filter=filter
-Class.Total.min.group=group
+Class.Total.min.group=group_level
 Class.Total.ave=ave
 Class.Total.ave.toolTip=The average value of a sequence of numbers or dates
-Class.Total.ave.expr=expr
+Class.Total.ave.expr=value
 Class.Total.ave.filter=filter
-Class.Total.ave.group=group
+Class.Total.ave.group=group_level
 Class.Total.weightedAve=weightedAve
 Class.Total.weightedAve.toolTip=The weighted average of a sequence of numbers
-Class.Total.weightedAve.expr=expr
+Class.Total.weightedAve.expr=value
 Class.Total.weightedAve.weight=weight
 Class.Total.weightedAve.filter=filter
-Class.Total.weightedAve.group=group
+Class.Total.weightedAve.group=group_level
 Class.Total.movingAve=movingAve
 Class.Total.movingAve.toolTip=A running average of a sequence of numbers in which the user specifies the number of values to consider when computing the average
-Class.Total.movingAve.expr=expr
+Class.Total.movingAve.expr=value
 Class.Total.movingAve.window=window
 Class.Total.movingAve.filter=filter
-Class.Total.movingAve.group=group
+Class.Total.movingAve.group=group_level
 Class.Total.median=median
 Class.Total.median.toolTip=The mathematical median of a sequence of numbers
-Class.Total.median.expr=expr 
+Class.Total.median.expr=value 
 Class.Total.median.filter=filter 
-Class.Total.median.group=group
+Class.Total.median.group=group_level
 Class.Total.mode=mode
 Class.Total.mode.toolTip=The mathematical mode of a sequence of values
-Class.Total.mode.expr=expr
+Class.Total.mode.expr=value
 Class.Total.mode.filter=filter
-Class.Total.mode.group=group
+Class.Total.mode.group=group_level
 Class.Total.stdDev=stdDev
 Class.Total.stdDev.toolTip=The mathematical standard deviation of a sequence of numbers
-Class.Total.stdDev.expr=expr
+Class.Total.stdDev.expr=value
 Class.Total.stdDev.filter=filter
-Class.Total.stdDev.group=group
+Class.Total.stdDev.group=group_level
 Class.Total.variance=variance
 Class.Total.variance.toolTip=The mathematical variance of a sequence of numbers
-Class.Total.variance.expr=expr
+Class.Total.variance.expr=value
 Class.Total.variance.filter=filter
-Class.Total.variance.group=group
+Class.Total.variance.group=group_level
 Class.Total.first=first
 Class.Total.first.toolTip=The first value in a sequence
-Class.Total.first.expr=expr
+Class.Total.first.expr=value
 Class.Total.first.filter=filter
-Class.Total.first.group=group
+Class.Total.first.group=group_level
 Class.Total.last=last
 Class.Total.last.toolTip=The last value in a sequence
-Class.Total.last.expr=expr
+Class.Total.last.expr=value
 Class.Total.last.filter=filter
-Class.Total.last.group=group
+Class.Total.last.group=group_level
 
 
 #27. Finance
