--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1922,7 +1922,7 @@ Element.ReportDesign.afterRender.reportContext=Report context
 Element.ReportDesign.displayNameID=Display name key
 Element.ReportDesign.displayName=Display name
 Element.ReportDesign.iconFile=Icon file
-Element.ReportDesign.cheetSheet=Cheet sheet
+Element.ReportDesign.cheetSheet=Cheat sheet
 Element.ReportDesign.beforeFactory.toolTip=Called at the start of the Factory after the initialize( ) method and before opening the report document (if any)
 Element.ReportDesign.afterFactory.toolTip=Called at the end of the Factory after closing the report document (if any). This is the last method called in the Factory
 Element.ReportDesign.beforeOpenDoc.toolTip=Called just before opening the report document in the Factory
