--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -67,6 +67,7 @@ data.engine.BadGroupKeyType=Group key has unsupported data type: {0}
 data.engine.group.interval=Setting a {0} interval on a column with type {1} is not supported.
 data.engine.group.interval.Rowid=Numeric interval is the only supported interval on rowId column.
 data.engine.NoSupportFilterOnGroup=Filtering on groups is not currently supported.
+data.engine.InvalidTopBottomArgument=The argument of Top/Bottom filters must be number.
 data.engine.InvalidTopBottomNArgument=The argument of TopN/BottomN filters must be either zero or a positive integer.
 data.engine.InvalidTopBottomPercentArgument=The argument of TopPercent/BottomPercent filters must be both positive and less than/equal to 100;
 data.engine.BadAggrFuncParam=Illegal parameter for aggregate function: {0}
