Revised the schema of the default element name.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2697,44 +2697,44 @@ Message.SetTheme=Set Theme
 ###########################################################
 #Element new names.
 
-New.ReportDesign=ReportDesign
-New.Parameter=Parameter
-New.CascadingParameterGroup=CascadingParameterGroup
-New.ScalarParameter=Parameter
-New.ParameterGroup=ParameterGroup
-New.Style=Style
-New.MasterPage=MasterPage
-New.ReportItem=ReportItem
-New.Label=Label
-New.FreeForm=FreeForm
-New.Data=Data
-New.Text=Text
-New.ListingGroup=ListingGroup
-New.List=List
-New.ListGroup=ListGroup
-New.Listint=Listing
-New.Table=Table
-New.TableGroup=TableGroup
-New.Column=Column
-New.Row=Row
-New.Cell=Cell
-New.Image=Image
-New.Grid=Grid
-New.Line=Line
-New.Tile=Tile
-New.Rectangle=Rectangle
-New.GraphicMasterPage=GraphicMasterPage
-New.SimpleMasterPage=SimpleMasterPage
-New.TextData=TextData
-New.ExtendedItem=ExtendedItem
-New.ScriptDataSource=ScriptDataSource
-New.ScriptDataSet=ScriptDataSet
-New.OdaDataSource=OdaDataSource
-New.OdaDataSet=OdaDataSet
-New.TemplateParameterDefinition=TemplateParameterDefinition
-New.TemplateDataSet=TemplateDataSet
-New.TemplateReportItem=TemplateReportItem
-New.Theme=Theme
+New.ReportDesign=NewReportDesign
+New.Parameter=NewParameter
+New.CascadingParameterGroup=NewCascadingParameterGroup
+New.ScalarParameter=NewParameter
+New.ParameterGroup=NewParameterGroup
+New.Style=NewStyle
+New.MasterPage=NewMasterPage
+New.ReportItem=NewReportItem
+New.Label=NewLabel
+New.FreeForm=NewFreeForm
+New.Data=NewData
+New.Text=NewText
+New.ListingGroup=NewListingGroup
+New.List=NewList
+New.ListGroup=NewListGroup
+New.Listint=NewListing
+New.Table=NewTable
+New.TableGroup=NewTableGroup
+New.Column=NewColumn
+New.Row=NewRow
+New.Cell=NewCell
+New.Image=NewImage
+New.Grid=NewGrid
+New.Line=NewLine
+New.Tile=NewTile
+New.Rectangle=NewRectangle
+New.GraphicMasterPage=NewGraphicMasterPage
+New.SimpleMasterPage=NewSimpleMasterPage
+New.TextData=NewTextData
+New.ExtendedItem=NewExtendedItem
+New.ScriptDataSource=NewScriptDataSource
+New.ScriptDataSet=NewScriptDataSet
+New.OdaDataSource=NewOdaDataSource
+New.OdaDataSet=NewOdaDataSet
+New.TemplateParameterDefinition=NewTemplateParameterDefinition
+New.TemplateDataSet=NewTemplateDataSet
+New.TemplateReportItem=NewTemplateReportItem
+New.Theme=NewTheme
 
 ###########################################################
 #Default theme name.
