--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -132,8 +132,8 @@ data.engine.BadDataType=Data type is not supported.
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
 odaconsumer.ColumnAliasCannotBeEmpty=Column alias cannot be an empty string.
-odaconsumer.CannotProcessDriverConfig=Cannot process the {0} driver's configurations.
-odaconsumer.OdaInitEntryNotFound=The driver {0}'s initial entry point cannot be found or cannot be instantiated.
+odaconsumer.CannotProcessDriverConfig=Cannot process the {0} driver''s configurations.
+odaconsumer.OdaInitEntryNotFound=The driver {0}''s initial entry point cannot be found or cannot be instantiated.
 odaconsumer.OdaDriverOnUnsupportedPlatform=The driver {0} does not support {1}.
 odaconsumer.CannotGenerateUrl=Cannot generate URL {0} for the classloader.
 odaconsumer.UnsupportedNativeType=Unsupported native type {0} for the data set type {1} of driver {2}.
