--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2909,7 +2909,7 @@ Error.XMLParserException.EXCEPTION=A generic exception occurred.
 Error.XMLParserException.INVALID_INTEGER=An integer attribute contains an invalid value.
     
 #UserPropertyException
-Error.UserPropertyException.NAME_REQUIRED=The use property must have a name.
+Error.UserPropertyException.NAME_REQUIRED=The user property must have a name.
 Error.UserPropertyException.DUPLICATE_NAME=The user property with the name "{0}" already exists.
 Error.UserPropertyException.INVALID_TYPE=The user property type is invalid. 
 Error.UserPropertyException.MISSING_CHOICES=The user property type is choice, but no choice is defined.
